--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,17 +9,54 @@ body {
     background-color: #212121;
     color: #fff;
     font-family: var(--REGULAR);
-    padding-top: 4vh;
+    padding-top: 1vw;
+}
+@media screen and (min-width: 800px) {
+    nav {
+        width: 5vw;
+        display: flex;
+        flex-direction: column;
+        position: fixed;
+        transform: translateX(-0.99vw);
+        font-size: 1.7vw;
+    }
+    #collapsed-nav {
+        display: none;
+    }
+}
+@media screen and (max-width: 800px) {
+    nav {
+        display: none;
+    }
+    #collapsed-nav {
+        display: flex;
+        flex-direction: column;
+        position: fixed;
+        transform: translateX(-0.99vw);
+        font-size: 17px;
+        border: 12.5px solid #2f2f2f;
+        border-right: 10px solid #2f2f2f;
+        border-radius: 1vw;
+        background-color: #2f2f2f;
+    }
+    #collapsednavmenu {
+        height: 100%;
+        width: 100%;
+        background-color: #212121;
+        color: #fff;
+        border: 0px;
+        font-family: var(--REGULAR);
+        font-size: 5vw;
+    }
+    #collapsednavmenu > form > button {
+        background-color: rgba(47, 47, 47, 0);
+        border: 0px;
+        color: #fff;
+        font-size: 5vw;
+        
+    }
 }
 
-nav {
-    width: 5vw;
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    transform: translateX(-1vw);
-    font-size: 3vh;
-}
 
 main {
     padding-left: 5.5vw;
@@ -27,6 +64,8 @@ main {
 
 .display {
     font-family: var(--DISPLAY);
+    font-size: 3.5vw;
+    padding: 0;
 }
 
 .monospace {
@@ -40,11 +79,32 @@ main {
 
 .nav-item {
     flex-grow: 1;
-    border: 4vh solid #2f2f2f;
+    border: 1.25vw solid #2f2f2f;
+    border-right: 1vw solid #2f2f2f;
     border-radius: 1vw;
     background-color: #2f2f2f;
 }
 .nav-spacer {
-    border: 1vh;
+    border: 1vw;
     background-color: transparent;
+}
+
+a {
+    color: #ffff99;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #ffff99;
+    text-decoration: underline;
+}
+
+#petition {
+    background-color: #212121;
+    color: #fff;
+    font-family: var(--REGULAR);
+    border: 0px;
+}
+#petition::backdrop {
+    background-color: rgba(47, 47, 47, 0.647);
 }
